# exper-surrealdb-fancy-def-tbl

./: Cargo.toml  README.md
src/: main.rs
