[package]
name = "exper-surrealdb-fancy-def-tbl"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.202", features = ["derive"] }
#surrealdb = { version = "1.5.1", features = ["kv-mem"] } # FAILS
surrealdb = { version = "1.5.1", features = ["kv-mem", "sql2"] } # OK
#surrealdb = { path = "../surrealdb/lib", features = ["kv-mem", "sql2"] } # FAILS
#surrealdb = { path = "../surrealdb/lib", features = ["kv-mem"] } # OK
#surrealdb = { version = "2.0.0", path = "../surrealdb/lib", features = ["kv-mem"] } # OK, installed with `cargo add surrealdb --path ~/prgs/SurrealDB/surrealdb/lib --features kv-mem`
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }

